--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,18 @@
             <version>1.10.0.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>1.2.3.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>1.2.3.RELEASE</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
